--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-    "typescript.tsdk": "./node_modules/typescript/lib"
+    "typescript.tsdk": "./node_modules/typescript/lib",
+    "taskButtons.buttons": [
+        {
+            "task": "webpack_dev",
+            "buttonLabel": "Webpack build $(beaker)"
+        }
+    ]
 }
