--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
         "target": "es5",
         "jsx": "react",
         "allowJs": true,
-        "types": ["node"]
+        "types": ["node"],
+        "lib": ["dom", "es2015.promise", "es5"]
     },
     "include": [
         "./src/**/*"
