--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "commonjs": "0.0.1",
     "http-server": "^0.9.0",
     "json-loader": "^0.5.4",
+    "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "source-map-loader": "^0.1.6",
     "ts-loader": "^2.0.0",
