--- a/package.json
+++ b/package.json
@@ -31,11 +31,15 @@
   "devDependencies": {
     "@types/node": "^7.0.5",
     "commonjs": "0.0.1",
+    "css-loader": "^0.9.0",
     "http-server": "^0.9.0",
     "json-loader": "^0.5.4",
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
+    "node-sass": "^4.5.0",
+    "sass-loader": "^4.0.0",
     "source-map-loader": "^0.1.6",
+    "style-loader": "^0.9.0",
     "ts-loader": "^2.0.0",
     "typescript": "^2.1.5",
     "webpack": "2.1.0-beta.21"
