--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "typinst": "typings install -g",
     "devpack": "webpack -d --display-modules --progress --color",
     "relpack": "webpack -p --display-modules --progress --color",
-    "server": "http-server ./dist",
+    "server": "http-server -p 8090 ./dist",
     "build": "webpack",
     "start": "npm run build -s && npm run server -s"
   },
@@ -29,9 +29,14 @@
     "xlsx": "^0.8.8"
   },
   "devDependencies": {
+    "@types/extract-text-webpack-plugin": "^2.0.1",
+    "@types/html-webpack-plugin": "^2.28.0",
     "@types/node": "^7.0.5",
+    "@types/node-sass": "^3.10.32",
     "commonjs": "0.0.1",
     "css-loader": "^0.9.0",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "html-webpack-plugin": "2.22.0",
     "http-server": "^0.9.0",
     "json-loader": "^0.5.4",
     "lodash": "^4.17.4",
@@ -41,7 +46,7 @@
     "source-map-loader": "^0.1.6",
     "style-loader": "^0.9.0",
     "ts-loader": "^2.0.0",
-    "typescript": "^2.1.5",
-    "webpack": "2.1.0-beta.21"
+    "typescript": "^2.2.2",
+    "webpack": "^2.4.1"
   }
 }
