--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,15 +2,13 @@
     "compilerOptions": {
         "outDir": "./dist/",
         "sourceMap": true,
-        "noImplicitAny": true,
         "module": "commonjs",
-        "target": "es5",
+        "target": "es6",
         "jsx": "react",
-        "allowJs": true,
-        "types": ["node"],
-        "lib": ["dom", "es2015.promise", "es5"]
+        "allowJs": true
     },
-    "include": [
-        "./src/**/*"
+    "exclude": [
+        "node_modules",
+        "wwwroot"
     ]
 }
