--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Renewable energy visualisation app.",
   "main": "index.js",
   "scripts": {
-    "typinst": "typings install -g",
-    "devpack": "webpack -d --display-modules --progress --color",
-    "relpack": "webpack -p --display-modules --progress --color",
+    "postinstall": "typings install -g",
+    "webpack-dev": "webpack -d --display-modules --progress --color --watch",
+    "webpack-rel": "webpack -p --display-modules --progress --color",
     "server": "http-server -p 8090 ./dist",
     "build": "webpack",
     "start": "npm run build -s && npm run server -s"
@@ -25,8 +25,7 @@
     "react": "^15.4.2",
     "react-chartjs-2": "^2.0.0",
     "react-dom": "^15.4.2",
-    "ts-xlsx": "0.0.9",
-    "xlsx": "^0.8.8"
+    "xlsx": "0.11.3"
   },
   "devDependencies": {
     "@types/extract-text-webpack-plugin": "^2.0.1",
@@ -46,7 +45,9 @@
     "source-map-loader": "^0.1.6",
     "style-loader": "^0.9.0",
     "ts-loader": "^2.0.0",
+    "ts-xlsx": "0.0.11",
     "typescript": "^2.2.2",
+    "typings": "^2.1.1",
     "webpack": "^2.4.1"
   }
 }
