--- a/package.json
+++ b/package.json
@@ -1,53 +1,50 @@
 {
   "name": "renenergyappweb",
   "version": "0.0.1",
-  "description": "Renewable energy visualisation app.",
+  "description": "Renewable energy visualisation app",
   "main": "index.js",
-  "scripts": {
-    "postinstall": "typings install -g",
-    "webpack-dev": "webpack -d --display-modules --progress --color --watch",
-    "webpack-rel": "webpack -p --display-modules --progress --color",
-    "server": "http-server -p 8090 ./dist",
-    "build": "webpack",
-    "start": "npm run build -s && npm run server -s"
-  },
   "author": "Sergey Uzheyko",
   "license": "ISC",
   "dependencies": {
-    "@types/lodash": "^4.14.52",
-    "@types/react": "^15.0.9",
-    "@types/react-dom": "^0.14.23",
-    "@types/xlsx": "0.0.32",
-    "cardinal-spline-js": "^2.3.6",
-    "chart.js": "^2.5.0",
-    "cubic-spline": "^1.0.4",
-    "raw-loader": "^0.5.1",
-    "react": "^15.4.2",
-    "react-chartjs-2": "^2.0.0",
-    "react-dom": "^15.4.2",
-    "xlsx": "0.11.3"
+    "cardinal-spline-js": "2.3.6",
+    "chart.js": "2.7.0",
+    "cubic-spline": "1.0.4",
+    "react": "15.6.1",
+    "react-chartjs-2": "2.0.0",
+    "react-dom": "15.6.1"
   },
   "devDependencies": {
-    "@types/extract-text-webpack-plugin": "^2.0.1",
-    "@types/html-webpack-plugin": "^2.28.0",
-    "@types/node": "^7.0.5",
-    "@types/node-sass": "^3.10.32",
-    "commonjs": "0.0.1",
-    "css-loader": "^0.9.0",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "html-webpack-plugin": "2.22.0",
-    "http-server": "^0.9.0",
-    "json-loader": "^0.5.4",
-    "lodash": "^4.17.4",
-    "moment": "^2.17.1",
-    "node-sass": "^4.5.0",
-    "sass-loader": "^4.0.0",
-    "source-map-loader": "^0.1.6",
-    "style-loader": "^0.9.0",
-    "ts-loader": "^2.0.0",
+    "@types/extract-text-webpack-plugin": "2.1.0",
+    "@types/html-webpack-plugin": "2.28.0",
+    "@types/lodash": "4.14.74",
+    "@types/node": "^8.0.30",
+    "@types/react": "",
+    "@types/react-dom": "",
+    "@types/webpack": "^3.0.11",
+    "css-loader": "0.28.7",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "html-webpack-plugin": "2.30.1",
+    "http-server": "0.10.0",
+    "json-loader": "0.5.7",
+    "lodash": "4.17.4",
+    "moment": "2.18.1",
+    "node-sass": "4.5.3",
+    "raw-loader": "0.5.1",
+    "sass-loader": "6.0.6",
+    "source-map-loader": "0.2.1",
+    "style-loader": "0.18.2",
+    "ts-loader": "2.3.7",
+    "ts-node": "^3.3.0",
     "ts-xlsx": "0.0.11",
-    "typescript": "^2.2.2",
-    "typings": "^2.1.1",
-    "webpack": "^2.4.1"
+    "typescript": "^2.5.2",
+    "typings": "2.1.1",
+    "webpack": "3.6.0"
+  },
+  "scripts": {
+    "postinstall": "typings install -g",
+    "devpack": "webpack -d --display-modules --progress --color",
+    "devpack:watch": "webpack -d --display-modules --progress --color --watch",
+    "relpack": "webpack -p --display-modules --progress --color",
+    "server": "http-server -p 8090 ./dist"
   }
 }
