--- a/package.json
+++ b/package.json
@@ -7,20 +7,24 @@
   "license": "ISC",
   "dependencies": {
     "cardinal-spline-js": "2.3.6",
-    "chart.js": "2.7.0",
+    "chart.js": "^2.7.0",
     "cubic-spline": "1.0.4",
     "react": "15.6.1",
-    "react-chartjs-2": "2.0.0",
+    "react-chartjs-2": "^2.6.2",
     "react-dom": "15.6.1"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/extract-text-webpack-plugin": "2.1.0",
     "@types/html-webpack-plugin": "2.28.0",
     "@types/lodash": "4.14.74",
     "@types/node": "^8.0.30",
     "@types/react": "",
+    "@types/react-chartjs-2": "^2.0.2",
     "@types/react-dom": "",
     "@types/webpack": "^3.0.11",
+    "altareturn-ui-controls": "^1.1.27",
+    "axios": "^0.16.2",
     "css-loader": "0.28.7",
     "extract-text-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "2.30.1",
@@ -42,9 +46,9 @@
   },
   "scripts": {
     "postinstall": "typings install -g",
-    "devpack": "webpack -d --display-modules --progress --color",
-    "devpack:watch": "webpack -d --display-modules --progress --color --watch",
-    "relpack": "webpack -p --display-modules --progress --color",
-    "server": "http-server -p 8090 ./dist"
+    "devpack": "webpack -d --progress --color",
+    "devpack:watch": "webpack -d --progress --color --watch",
+    "relpack": "webpack -p --progress --color",
+    "start": "http-server -p 8090 ./dist"
   }
 }
